[cs-ui] CSSelect - prevented box-shadow visibility if component is disabled

--- a/cs-ui-components/src/sass/components/_cs-select.scss
+++ b/cs-ui-components/src/sass/components/_cs-select.scss
@@ -34,6 +34,7 @@
 			&:disabled {
 				cursor: default;
 				user-select: none;
+				pointer-events: none;
 				@include sbg(--cs-input-disabled-bg);
 				@include css4 {
 					border-color: cvar(--cs-input-disabled-br);
